[package]
name = "dioxus-library-template"
version = "0.1.0"
edition = "2021"
description = "Library for Dioxus 🧬"
readme = "./README.md"
homepage = "https://github.com/dioxus-community/dioxus-library-template"
repository = "https://github.com/dioxus-community/dioxus-library-template"
keywords = ["dioxus"]
categories = ["gui"]
license = "MIT"

[dependencies]
dioxus = { version = "0.4", default-features = false, features = ["macro", "hooks"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
dioxus-desktop = "0.4.3"
dioxus = { version = "0.4", default-features = true }